Bake data of fluid causes crash of Blender #73111

Closed
opened 2020-01-14 08:47:16 +01:00 by Vovchik · 9 comments

System Information
Operating system: Linux
Graphics card: Internal, Intel HD 4600 (Haswell)

Blender Version
Broken: Blender 2.82 (sub 6), Commit date: 2020-01-13 17:12
Worked: (optional)

Exact steps for others to reproduce the error
Open attached example file and click "bake data"

Screenshot_20200114_104513.png

Example file

untitled.blend

Crash info

# Blender 2.82 (sub 6), Commit date: 2020-01-13 17:12, Hash c56526d8b68a

# backtrace
./blender(BLI_system_backtrace+0x1d) [0x43609cd]
./blender() [0x167efa9]
/usr/lib/libc.so.6(+0x3bfb0) [0x7fe27a669fb0]
./blender(BKE_fluid_reallocate_copy_fluid+0x81b) [0x17f332b]
./blender() [0x17f5add]
./blender(BKE_fluid_modifier_do+0x1858) [0x17f8e78]
./blender() [0x248d5ab]
./blender() [0x1795a9a]
./blender() [0x1796643]
./blender(makeDerivedMesh+0x97) [0x1797c87]
./blender(BKE_object_handle_data_update+0x358) [0x17103d8]
./blender(BKE_object_eval_uber_data+0x2e) [0x17106ae]
./blender() [0x2a3fb45]
./blender() [0x2a3fd09]
./blender() [0x4360df0]
/usr/lib/libpthread.so.0(+0x94cf) [0x7fe27aa004cf]
/usr/lib/libc.so.6(clone+0x43) [0x7fe27a72d2d3]
**System Information** Operating system: Linux Graphics card: Internal, Intel HD 4600 (Haswell) **Blender Version** Broken: Blender 2.82 (sub 6), Commit date: 2020-01-13 17:12 Worked: (optional) **Exact steps for others to reproduce the error** Open attached example file and click "bake data" ![Screenshot_20200114_104513.png](https://archive.blender.org/developer/F8277613/Screenshot_20200114_104513.png) **Example file** [untitled.blend](https://archive.blender.org/developer/F8277609/untitled.blend) **Crash info** ``` # Blender 2.82 (sub 6), Commit date: 2020-01-13 17:12, Hash c56526d8b68a # backtrace ./blender(BLI_system_backtrace+0x1d) [0x43609cd] ./blender() [0x167efa9] /usr/lib/libc.so.6(+0x3bfb0) [0x7fe27a669fb0] ./blender(BKE_fluid_reallocate_copy_fluid+0x81b) [0x17f332b] ./blender() [0x17f5add] ./blender(BKE_fluid_modifier_do+0x1858) [0x17f8e78] ./blender() [0x248d5ab] ./blender() [0x1795a9a] ./blender() [0x1796643] ./blender(makeDerivedMesh+0x97) [0x1797c87] ./blender(BKE_object_handle_data_update+0x358) [0x17103d8] ./blender(BKE_object_eval_uber_data+0x2e) [0x17106ae] ./blender() [0x2a3fb45] ./blender() [0x2a3fd09] ./blender() [0x4360df0] /usr/lib/libpthread.so.0(+0x94cf) [0x7fe27aa004cf] /usr/lib/libc.so.6(clone+0x43) [0x7fe27a72d2d3] ```
Author

Added subscriber: @vademenev

Added subscriber: @vademenev

Added subscriber: @PGT2

Added subscriber: @PGT2

On a side note, the problem is in adaptive domain handling here.
Did some tests with the file, turning it of made it work in latest win build version.

//Overall though i got the feeling Fluid isnt yet ready yet.
( fluid inflow velocity doesn't work either there is allready a bug report for that ).//

On a side note, the problem is in adaptive domain handling here. Did some tests with the file, turning it of made it work in latest win build version. //Overall though i got the feeling Fluid isnt yet ready yet. ( fluid inflow velocity doesn't work either there is allready a bug report for that ).//

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @sebbas, @mont29

Added subscribers: @sebbas, @mont29
Sebastián Barschkis was assigned by Bastien Montagne 2020-01-15 15:51:39 +01:00

@sebbas think that one is for you?

@sebbas think that one is for you?

@mont29 Yes! I am taking a look at this now!

@mont29 Yes! I am taking a look at this now!

This issue was referenced by 68462a9419

This issue was referenced by 68462a941946af8d39d817101a3746e31365e8c9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73111
No description provided.