Fix T73111: Bake data of fluid causes crash of Blender